# WPF-XRay-Tracing

./: .gitignore  README.md  README_BACKUP_7264.md  README_LOCAL_7264.md  README_REMOTE_7264.md
Interface/: Interface.sln  eta.txt
Interface/Interface/: AdditionalApproximation.cs  App.xaml.cs  Averaging.cs  Computation.xaml  Computation.xaml.cs  ConfigPlotter.cs  CrystalPlot.cs  Detector.cs  DetectorPlot.cs  Extension.cs  Interface.csproj  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenFileButton.xaml  OpenFileButton.xaml.cs  README.md  SystemConfig.cs  WaveLenghts.cs  WaveLengthLoader.cs  WavePlotter.cs  conf.xconf  demo.txt  json.json  packages.config  res.txt  res_eta.txt  res_new.txt  trans-db.txt
Interface/Interface/Input/: quartz1010.cryst
Interface/Interface/Properties/: AssemblyInfo.cs
Interface/Interface/example/: curve_v2.curve  quartz100.cryst
Interface/Interface/sys/: pattern.par  xray-tracing.dll.metagen  xray-tracing.exp
Tracer/: .clang-format  CMakeLists.txt  DetectorPlane.cpp  DetectorPlane.hpp  InputOutput.cpp  InputOutput.hpp  LightSorce.cpp  LightSorce.hpp  Object.cpp  Object.hpp  Ray-tracing.cpp  Ray-tracing.hpp  Trace.cpp  Trace.hpp  Tracer.vcxproj  Tracer.vcxproj.filters  TransitivityMap.cpp  TransitivityMap.hpp  Utils.cpp  Utils.hpp  env_builder.cpp  env_builder.hpp  general.cpp  general.hpp  gridFunction.cpp  line_profile.hpp  mainParameters.cpp  mainParameters.hpp  param.cpp  param.h  tCylinder.cpp  tCylinder.hpp  tMirror.hpp  tObject.cpp  tObject.hpp  tPlane.cpp  tPlane.hpp  tRay.hpp  tSphere.cpp  tSphere.hpp  (+2 more)
Tracer/test/: CMakeLists.txt  Order_1.par  main.cpp
